# spbgti-tools-schedule

./: .gitignore  .travis.yml  Procfile  README.md  app.json  ci_script.sh  db.sqlite3  heroku.sh  manage.py  pyproject.toml  pytest.ini  remove_migrations.py  requirements.txt  settings.py  testdb.sqlite3  travis.yml  utils.py  views.py
ScheduleApp/: edit.py  settings.py  urls.py  wsgi.py
api/: admin.py  endpoints.py  filters.py  flask_app.py  http_codes.py  json_helper.py  models.py  serializers.py  test_helpers.py  tests.py  urls.py  views.py  viewsets.py
api/migrations/: 0001_initial.py  0002_auto_20160608_2358.py  0002_auto_20160911_0139.py  0003_auto_20160911_0208.py  0004_auto_20160911_0312.py  0005_auto_20170211_2042.py  0006_teacher_to_teachers.py
core/: __init__.py  admin.py  models.py
core/migrations/: 0001_initial.py  0002_auto_20160608_2358.py  0002_auto_20160901_1652.py  0003_auto_20160911_0000.py  0004_auto_20170211_2042.py  0005_auto_20170211_2043.py  0006_auto_20170220_1019.py  0007_unique_teacher_name.py
docs/: Makefile  make.bat
docs/source/: api.rst  bot_concept.rst  ci_process.rst  conf.py  contact.rst  general_plans.rst  getting_started.rst  index.rst  schedule_api.rst
main/: exceptions.py  models.py  utils.py  views.py
main_app/: edit.py  settings.py  urls.py  wsgi.py
schedule/: admin.py  models.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  (+3 more)
shared/: fields.py
spbgti_core/: apps.py  fields.py  models.py
templates/: schedule.html
tests/: test_groups.py  test_locations.py  test_rooms.py  test_teachers.py
(+8 files in other folders)
